--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
 <div id="main_menu">
 <%= link_to "Rental Contracts", contracts_url %> |
+<%= link_to "Buildings", buildings_url %> |
 <%= link_to "Storage Units", storage_units_url %> |
 <%= link_to "Renters", renters_url %>
 </div>
