--- a/app/views/storage_units/_form.html.erb
+++ b/app/views/storage_units/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :building_id %><br>
+    <%= collection_select(:storage_unit, :building_id, Building.all, :id, :name, prompt: true) %>
+  </div>
+
+  <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
@@ -30,10 +35,6 @@
   <div class="field">
     <%= f.label :height %><br>
     <%= f.number_field :height %>
-  </div>
-  <div class="field">
-    <%= f.label :renter_id %><br>
-    <%= f.number_field :renter_id %>
   </div>
   <div class="field">
     <%= f.label :annual_rate %><br>
